# update-rust-toolchain

./: .gitignore  Cargo.toml  README.md  action.yml  flake.nix  justfile  prepare-environment.sh  run.sh  rust-toolchain  rust-toolchain.bak  rust-toolchain.toml  update-toolchain.py  update-toolchain.sh
.github/workflows/: ci.yml  test.yml  update-beta.yml  update-nightly.yml  update-stable.yml  yaml.yml
beta/: 2022-09-25.json  2022-12-14.json  2023-01-01.json  2023-01-15.json  2023-01-23.json  2023-02-09.json  2023-02-16.json  2023-03-07.json  2023-04-01.json  2023-04-14.json  2023-05-06.json  2023-05-08.json  metadata.json  since-2022-09-25-map.json  since-2022-11-01-map.json
beta/2022/: 2022-10-11.json  2022-10-22.json  2022-10-29.json  2022-10-30.json  2022-11-01.json  2022-11-21.json  2022-12-27.json  (+1 more)
nightly/: 2022-10-02.json  2022-10-04.json  2022-10-05.json  2022-10-09.json  2022-10-11.json  2022-10-12.json  2022-10-13.json  2022-10-15.json  2022-10-16.json  2022-10-21.json  2022-10-22.json  2022-10-24.json  2022-10-25.json  2022-10-31.json  2022-11-02.json  2022-11-07.json  2022-11-08.json  2022-11-09.json  2022-11-13.json  2022-11-14.json  2022-11-16.json  2022-11-17.json  2022-11-20.json  2022-11-21.json  2022-11-25.json  2022-11-28.json  2022-11-29.json  2022-12-01.json  2022-12-03.json  2022-12-07.json  2022-12-08.json  2022-12-09.json  2022-12-11.json  2022-12-12.json  2022-12-13.json  2022-12-14.json  2022-12-16.json  2022-12-17.json  2022-12-18.json  2022-12-19.json  (+62 more)
src/: main.rs
stable/: 2023-02-09.json  2023-03-28.json  metadata.json
(+1381 files in other folders)
