[package]
name = "update-rust-toolchain"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.65"
clap = { version = "3.2.22", features = ["derive"] }
reqwest = { version = "0.11.12", features = ["blocking"] }
serde = { version = "1.0.145", features = ["derive"] }
serde_derive = "1.0.145"
serde_json = "1.0.85"
thiserror = "1.0.36"
toml = "0.5.9"
